# software-KVM

./: README.md  SoftwareKVM.spec  build-linux.sh  build.sh  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/capture/: __init__.py  video_capture.py
src/gui/: __init__.py  main_window.py  video_widget.py
src/hid/: __init__.py  ch9329.py  keymap.py
src/input/: __init__.py  global_hook.py
src/utils/: __init__.py  serial_utils.py
